--- a/Task_2.ipynb
+++ b/Task_2.ipynb
@@ -11,6 +11,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#References\n",
+    "\n",
+    "https://www.w3resource.com/python-exercises/\n",
+    "\n",
+    "https://pynative.com/python-exercises-with-solutions/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 1. Python program to read an entire text file  ( Use file test.txt )"
    ]
   },
@@ -34,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,11 +73,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Write a program diplaying sorted list of words \n",
+    "   stored in file \"three_rings.txt\".\n",
+    "\n",
+    "    - words have no comas nor dots\n",
+    "    - same case (either uppercase or lowercase)\n",
+    "    - unique words "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Solution\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. We have a file \"people_age.txt\" containing lines \"name age\". \n",
+    "   Build a dictionary (use names as keys) out of this file and display it. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Solution\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6. Take file \"three_rings.txt\" and build file \"three_wings.txt\".\n",
+    "   (by exchanging any Ring into Wing). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Solution\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -85,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
